--- a/iaexpert_python_fundamentals.ipynb
+++ b/iaexpert_python_fundamentals.ipynb
@@ -4065,7 +4065,7 @@
         "# importando o pacote das expressões regulares \r\n",
         "import re"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -4280,19 +4280,36 @@
       "source": [
         "frase5 = 'Meu numero de telefone atual é (42)0000-0000. O numero (56)1111-1111 é o antigo'"
       ],
-      "execution_count": 28,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w2whJOtu01MV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w2whJOtu01MV",
+        "outputId": "a37580b0-8c52-4b60-fbd0-3d01ccd731c3"
       },
       "source": [
-        ""
+        "re.findall('\\(\\d{2}\\)\\d{4,5}-\\d{4}', frase5) "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['(42)0000-0000', '(56)1111-1111']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4308,7 +4325,46 @@
         "email: teste3@teste.com.br\r\n",
         "'''"
       ],
-      "execution_count": 29,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XsCviZwJ6_3J",
+        "outputId": "db2b701a-7dc0-45db-c7fa-e79908041b58"
+      },
+      "source": [
+        "re.findall('\\w+@\\w+\\.com', emails)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['teste1@teste.com', 'teste2@teste.com', 'teste3@teste.com']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5j3ynGq-7jpf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4323,10 +4379,388 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "pFdL6B_r7po2"
+      },
+      "source": [
+        "1. Crie expressões regulares para extrair as seguintes informações do texto abaixo (use a função findall):\r\n",
+        "- Números\r\n",
+        "- CEPs\r\n",
+        "- URLs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EiY9l_yd7tLv"
+      },
+      "source": [
+        "texto = 'Meu endereço é na rua Joaquim Simões, 2222. O CEP é 85350-150 e meu site é https://www.iaexpert.academy.com ou http://iaexpert.com.br'"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qXEUep118UtG"
+      },
+      "source": [
+        "import re"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N78vNJbd8YJN",
+        "outputId": "25ebd960-36ad-44eb-8770-1a3153b431c7"
+      },
+      "source": [
+        "re.findall('\\d', texto)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['2', '2', '2', '2', '8', '5', '3', '5', '0', '1', '5', '0']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VcatcA5o8Xh5",
+        "outputId": "37b201f6-ea08-4d78-82a4-b19531e4829e"
+      },
+      "source": [
+        "re.findall('\\d{5}-\\d{3}', texto)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['85350-150']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FCQHpLDS9IGo",
+        "outputId": "6dc56935-9018-4142-dd2a-6b849b489ce3"
+      },
+      "source": [
+        "re.findall('https?://[A-Za-z0-9./]+', texto)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['https://www.iaexpert.academy.com', 'http://iaexpert.com.br']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "t-1NXr0E-tma"
       },
       "source": [
         "# Aula 13. Orientação a objetos"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MADH4DaC-Pxn"
+      },
+      "source": [
+        "## 13.1 Classe e Objeto"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8KMGOtIj-UuR"
+      },
+      "source": [
+        "**Classe** é um agrupamento de objetos similares que apresentam os mesmos **atributos** (*string*, *listas*, *tuplas* (características)) e **métodos** (*funções* (ações)).\r\n",
+        "\r\n",
+        "Ex: molde de bonecos de gesso\r\n",
+        "- define o formato e tamanho\r\n",
+        "- o molde é sempre o mesmo, porém os objetos gerados podem ter características variadas, respeitando a estrutura básica do molde. Um objeto pode ter cores diferentes, porém serão o mesmo objeto.\r\n",
+        "\r\n",
+        "Ex: uma calculadora possui:\r\n",
+        "- CARACTERISTICAS:\r\n",
+        "  - cor\r\n",
+        "  - marca\r\n",
+        "  - tamanho\r\n",
+        "  - data de fabricação\r\n",
+        "- AÇÕES:\r\n",
+        "  - somar\r\n",
+        "  - dividir\r\n",
+        "  - subtrair\r\n",
+        "  - multiplicar\r\n",
+        "\r\n",
+        "Em suma: \r\n",
+        "\r\n",
+        "**Classe**: molde de boneco de gesso\r\n",
+        "\r\n",
+        "**Objetos**: bonecos de gesso \r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c0XYG4FGIpDQ"
+      },
+      "source": [
+        "#### **Exercicios práticos**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XrNUEZ9LIrZp"
+      },
+      "source": [
+        "# definindo as funções e atributos da classe\r\n",
+        "class Triangulo:\r\n",
+        "  # também chamada de FUNÇÃO CONSTRUTURA ou de CONSTRUTOR\r\n",
+        "  def __init__(self, lado1, lado2, lado3, base, altura):\r\n",
+        "    # criando os atributos da classe:\r\n",
+        "    self.lado1 = lado1\r\n",
+        "    self.lado2 = lado2\r\n",
+        "    self.lado3 = lado3\r\n",
+        "    self.base = base\r\n",
+        "    self.altura = altura\r\n",
+        "\r\n",
+        "  def area(self):\r\n",
+        "    return (self.base * self.altura) / 2\r\n",
+        "\r\n",
+        "  def tipo(self):\r\n",
+        "    if self.lado1 > self.lado2 + self.lado3:\r\n",
+        "      return 'não é um triangulo'\r\n",
+        "    elif self.lado1 == self.lado2 or self.lado1 == self.lado3 or self.lado2 == self.lado3:\r\n",
+        "      return 'triangulo isósceles'\r\n",
+        "    else:\r\n",
+        "      return 'outro tipo de triangulo'"
+      ],
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "291TIw0OJLno"
+      },
+      "source": [
+        "# criando o primeiro objeto a partir da class Triangulo\r\n",
+        "t1 = Triangulo(5, 1, 3, 4, 3)"
+      ],
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GiHQZOyBJLXr",
+        "outputId": "a0d00cb5-7861-4035-8699-897b0393b8bb"
+      },
+      "source": [
+        "print(t1.lado1, t1.lado2, t1.lado3, t1.base, t1.altura)"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5 1 3 4 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5cC7rrCQK6m8",
+        "outputId": "cd6f4b16-146a-45a9-bc84-7b3203dc76f1"
+      },
+      "source": [
+        "t1.area()"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "jx-Jb4_JR7KZ",
+        "outputId": "2f58fafb-9dee-4ae1-e578-ab852f66be41"
+      },
+      "source": [
+        "t1.tipo()"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'não é um triangulo'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YuUC56cnJgHI",
+        "outputId": "89900ac8-bb17-475c-f41d-5f6f6914cc98"
+      },
+      "source": [
+        "# criando outro objeto a partir da class Triangulo\r\n",
+        "t2 = Triangulo(8, 8, 8, 16, 9)\r\n",
+        "print(t2.lado1, t2.lado2, t2.lado3, t2.base, t2.altura)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8 8 8 16 9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IC49Gnn4K_ts",
+        "outputId": "2b293e88-2828-4c90-a963-c7b617e4f60d"
+      },
+      "source": [
+        "t2.area()"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "72.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ZvRjsqfOSKdG",
+        "outputId": "43324a3b-645c-4da9-af40-120582d878b2"
+      },
+      "source": [
+        "t2.tipo()"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'triangulo isósceles'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
       ]
     },
     {
@@ -4344,7 +4778,251 @@
         "id": "PIFC5SLT-xRi"
       },
       "source": [
-        "1. "
+        "1. Crie uma classe chamada aluno com os seguintes atributos:\r\n",
+        "- Nome\r\n",
+        "- Nota 1\r\n",
+        "- Nota 2\r\n",
+        "- Crie um construtor para a classe (__init__)\r\n",
+        "\r\n",
+        "\r\n",
+        "2. Crie as seguintes funções (métodos):\r\n",
+        "- Calcula média, retornando a média aritmética entre as notas\r\n",
+        "- Mostra dados, que somente imprime o valor de todos os atributos\r\n",
+        "- Resultado, que verifica se o aluno está aprovado ou reprovado (se a média for maior ou igual a 6.0, o aluno está aprovado)\r\n",
+        "\r\n",
+        "3. Crie dois objetos (aluno1 e aluno2) e teste as funções"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TrnWgoXtTDXY"
+      },
+      "source": [
+        "class Aluno:\r\n",
+        "  def __init__(self, nome, nota1, nota2):\r\n",
+        "    self.nome = nome\r\n",
+        "    self.nota1 = nota1\r\n",
+        "    self.nota2 = nota2\r\n",
+        "    self.media = 0.0\r\n",
+        "\r\n",
+        "  def calcula_media(self):\r\n",
+        "    self.media = (self.nota1 + self.nota2) / 2\r\n",
+        "    return self.media\r\n",
+        "\r\n",
+        "  def mostra_dados(self):\r\n",
+        "    print('Nome: ', self.nome)\r\n",
+        "    print('Nota 1: ', self.nota1)\r\n",
+        "    print('Nota 2: ', self.nota2)\r\n",
+        "    print('Media: ', self.media)\r\n",
+        "    \r\n",
+        "\r\n",
+        "  def resultado(self):\r\n",
+        "    if self.media >= 6.0: \r\n",
+        "      return 'O aluno está aprovado'\r\n",
+        "    else:\r\n",
+        "      return 'O aluno está reprovado'"
+      ],
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WXFFtvRkTWSt"
+      },
+      "source": [
+        "aluno1 = Aluno('Marcos', 6.9, 7.4)"
+      ],
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XQIwExP8U1Iw",
+        "outputId": "ff9f3e81-a2fa-4f49-f809-a8035b35de6b"
+      },
+      "source": [
+        "media = aluno1.calcula_media()\r\n",
+        "print(media)"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7.15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E-0jXJhdU6co",
+        "outputId": "7badbc9f-f45c-4c79-c826-f668cb8126ad"
+      },
+      "source": [
+        "aluno1.mostra_dados()"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Nome:  Marcos\n",
+            "Nota 1:  6.9\n",
+            "Nota 2:  7.4\n",
+            "Media:  7.15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "hSM8arEQU8zP",
+        "outputId": "230fe58a-6fd8-49c4-9f5c-87c09d476dc1"
+      },
+      "source": [
+        "aluno1.resultado()"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'O aluno está aprovado'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kre1d9L-TdSv"
+      },
+      "source": [
+        "aluno2 = Aluno('Ana', 6.0, 4.0)"
+      ],
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gVucKx8TVKIz",
+        "outputId": "78ad768b-1ccf-4c5d-8a3d-9ecc87400833"
+      },
+      "source": [
+        "aluno2.calcula_media()"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fmw_D_piVJzg",
+        "outputId": "5d1dcc7e-bb7e-4613-bb82-c634cb87bdd0"
+      },
+      "source": [
+        "aluno2.mostra_dados()"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Nome:  Ana\n",
+            "Nota 1:  6.0\n",
+            "Nota 2:  4.0\n",
+            "Media:  5.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "2O80BLSdVJoC",
+        "outputId": "6fe1445e-bcaf-4402-c327-7349b34cb165"
+      },
+      "source": [
+        "aluno2.resultado()"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'O aluno está reprovado'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cySzW_qBYY6r"
+      },
+      "source": [
+        "# FIM DO CONTEÚDO DO CURSO! :)"
       ]
     }
   ]
